complete blog app

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <body>
     <div class="container">
+    <div class="input-group input-group-lg heading">
+        <span class="input-group-text title-heading">Blog Title</span>
+        <input id="title" placeholder="Enter Blog Title" type="text" class="form-control heading" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+      </div>
 
         <div class="editor">
             <div id="editor">
